[package]
name = "loga"
version = "0.2.0"
edition = "2021"
description = "Combined logging and error handling"
license = "ISC"
readme = "readme.md"
repository = "https://github.com/andrewbaxter/loga"

[dependencies]
chrono = "0.4.31"
console = "0.15.8"
textwrap = { version = "0.16.0", features = ["terminal_size"] }
