[package]
name = "loga"
version = "0.3.1"
edition = "2021"
description = "Combined logging and error handling"
license = "ISC"
readme = "readme.md"
repository = "https://github.com/andrewbaxter/loga"

[dependencies]
bitflags = "2.4.1"
chrono = "0.4.31"
console = "0.15.8"
textwrap = { version = "0.16.0", features = ["terminal_size"] }
