[package]
name = "loga"
version = "0.5.4"
edition = "2021"
description = "Combined logging and error handling"
license = "ISC"
readme = "readme.md"
repository = "https://github.com/andrewbaxter/loga"

[dependencies]
chrono = "0.4"
console = "0.15"
textwrap = { version = "0.16", features = ["terminal_size"] }
